// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color prop is passed successfully 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <p
      class="PU-11499-root-0-2-1 PU-11499-root-d6-0-2-10 PU-11499-body-0-2-8"
    >
      I am red text!
    </p>
  </div>
</div>
`;

exports[`Renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <h1
      class="PU-67892-root-0-2-1 PU-67892-root-d6-0-2-10 PU-67892-title-0-2-2"
    >
      PlayPickUp
    </h1>
  </div>
</div>
`;
